<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SGH</string>

    <string name="act_login_message_error_server">Error de conexión con el servidor</string>

    <string name="act_login_button_login">Iniciar sesión</string>
    <string name="act_login_button_login_progress">Iniciando sesión</string>
    <string name="act_login_input_username">Nombre de usuario</string>
    <string name="act_login_input_password">Contraseña</string>
    <string name="act_login_checkbox_remember">Recordar credenciales</string>
    <string name="act_login_message_error_credentials">Usuario o contraseña incorrecta</string>
    <string name="act_login_message_error_empty">Usuario o contraseña en blanco</string>

    <string name="act_login_text">Inicie sesión con tu cuenta</string>

    <string name="act_login_settings">Pulse aquí para ir a la configuración</string>

    <string name="act_login_hello">¡Hola!</string>

    <string name="act_dashboard_message_teachers">Profesores</string>
    <string name="act_dashboard_message_courses">Cursos</string>
    <string name="act_dashboard_message_classrooms">Aulas</string>
    <string name="act_dashboard_message_schedules">Horarios</string>
    <string name="act_dashboard_message_groups">Grupos</string>
    <string name="act_dashboard_message_subjects">Asignaturas</string>
    <string name="act_dashboard_message_name">I.E.S Fernando Aguilar Quignon</string>
    <string name="act_dashboard_message_app">Sistema de gestión de horarios</string>
    <string name="act_dashboard_message_exit">Desconexión</string>
    <string name="act_dashboard_message_disconnected">Desconectándote del sistema...</string>

    <string name="close_confirmation">¿Estás seguro de que deseas salir del sistema?</string>
    <string name="disconnect_confirmation">¿Estás seguro de que deseas salir de tu cuenta?</string>

    <string name="act_dashboard_message_hello">Bienvenido de nuevo,</string>
    <string name="act_dashboard_message_teacher_name">Nombre del usuario</string>

    <string name="item_teacher_name">Nombre</string>
    <string name="item_teacher_department" translatable="false">Departamento: <xliff:g example="-" id="department">%s</xliff:g></string>
    <string name="item_teacher_abreviation">Abreviación: <xliff:g example="-" id="abreviation">%s</xliff:g></string>

    <string name="act_teachers_title">Profesores</string>
    <string name="act_teachers_department">Departamento</string>

    <string name="item_classroom_name">Nombre: <xliff:g example="" id="name">%s</xliff:g></string>
    <string name="item_classroom_floor">Planta: <xliff:g example="0" id="floor">%s</xliff:g></string>

    <string name="act_classrooms_title">Aulas</string>
    <string name="act_classrooms_floor">Planta</string>
    <string name="act_classrooms_search_day">Día</string>
    <string name="act_classrooms_search_hour">Hora</string>
    <string name="act_classrooms_search_button">Buscar aulas</string>

    <string name="item_course_name"><xliff:g example="" id="course">%s</xliff:g></string>

    <string name="act_courses_title">Cursos</string>

    <string name="act_groups_title">Grupos</string>

    <string name="act_subjects_title">Asignaturas</string>

    <string name="course_options_name">Grupos y asignaturas de <xliff:g example="" id="course">%s</xliff:g></string>

    <string name="item_subject_number">Número: <xliff:g example="-" id="number">%s</xliff:g></string>
    <string name="item_subject_abreviation">Abreviación: <xliff:g example="-" id="abreviation">%s</xliff:g></string>
    <string name="item_subject_courses">Cursos asignados: <xliff:g example="-" id="courses">%s</xliff:g></string>

    <string name="act_subjects_course">Curso</string>

    <string name="fragment_subjectcourses_info">Cursos asignados de la asignatura</string>

    <string name="item_group_course">Curso: <xliff:g example="" id="course">%s</xliff:g></string>
    <string name="item_group_letter">Letra: <xliff:g example="" id="letter">%s</xliff:g></string>

    <string name="act_groups_course">Curso</string>

    <string name="sgh_preference_key">sgh_preference_key</string>
    <string name="sgh_preference_user">sgh_preference_user</string>
    <string name="sgh_preference_pass">sgh_preference_pass</string>
    <string name="sgh_preference_ip">sgh_preference_ip</string>
    <string name="sgh_preference_port">sgh_preference_port</string>

    <string name="act_settings_title">Configuración</string>

    <string name="act_settings_ip_title">Dirección IP</string>
    <string name="act_settings_port_title">Número de puerto</string>

    <string name="act_settings_ip_summary">¿Estás seguro de cambiar la dirección IP?</string>
    <string name="act_settings_port_summary">¿Estás seguro de cambiar el número de puerto?</string>

    <string name="option_accept">Sí</string>
    <string name="option_cancel">No</string>

    <string name="search_input_hint">Escribe para buscar...</string>

    <string name="act_schedules_title">Buscar horario</string>
    <string name="act_schedules_teacher_info">Profesor / Profesora</string>
    <string name="act_schedules_group_info">Grupo</string>
    <string name="act_schedules_classroom_info">Aula</string>
    <string name="act_schedules_search">Buscar horario</string>

    <string name="act_schedule_title">Horario</string>
    <string name="item_schedule_teacher">Profesor: <xliff:g example="-" id="teacher">%s</xliff:g></string>
    <string name="item_schedule_subject">Asignatura: <xliff:g example="-" id="subject">%s</xliff:g></string>
    <string name="item_schedule_classroom">Aula: <xliff:g example="-" id="classroom">%s</xliff:g></string>
    <string name="item_schedule_group">Grupo: <xliff:g example="-" id="group">%s</xliff:g></string>
    <string name="act_classrooms_search">Buscar aulas libres</string>

</resources>