<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/cCardBackgroundColor"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:layout_marginTop="24dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/item_schedule_cardview"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/item_schedule_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/cDecorationBarBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/item_schedule_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="15dp"
                android:text="LUNES"
                android:textAlignment="viewStart"
                android:textColor="?attr/cColorOnSecondary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_schedule_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="15dp"
                android:text="8:00 - 9:00"
                android:textAlignment="viewEnd"
                android:textColor="?attr/cColorOnSecondary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/item_schedule_top">

            <TextView
                android:id="@+id/item_schedule_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:textColor="?attr/cColorSchedule"
                android:text="@string/item_schedule_teacher"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_schedule_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:textColor="?attr/cColorSchedule"
                android:text="@string/item_schedule_subject"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_schedule_classroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/cColorSchedule"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/item_schedule_classroom"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_schedule_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/cColorSchedule"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"
                android:text="@string/item_schedule_group"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>