<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background_dialog"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/option_course_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:textColor="?attr/cColorOnPrimary"
        android:text="@string/course_options_name"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/option_groups_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="?attr/cDefaultButtonBackgroundColor"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_groups"
                app:tint="?attr/cColorOnSecondary" />

            <TextView
                android:id="@+id/option_stops_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="?attr/cColorOnSecondary"
                android:text="@string/act_groups_title"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/option_subjects_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardBackgroundColor="?attr/cDefaultButtonBackgroundColor"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="15dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_subjects"
                app:tint="?attr/cColorOnSecondary" />

            <TextView
                android:id="@+id/option_subjects_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="?attr/cColorOnSecondary"
                android:text="@string/act_subjects_title"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>


