<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MainActivity"
    android:background="?attr/cBackgroundColor">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationViewLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView2"
            android:transitionName="title2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/act_login_hello"
            android:textColor="?attr/cColorOnPrimary"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/titleTextView"
            android:transitionName="title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/act_login_text"
            android:gravity="center_vertical"
            android:textColor="?attr/cColorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.cardview.widget.CardView
            android:id="@+id/usernameCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/cCardLoginInputBackgroundColor"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_teacher"
                    app:tint="?attr/cInputHintColor" />

                <EditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="?attr/cCardLoginInputBackgroundColor"
                    android:hint="@string/act_login_input_username"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp"
                    android:textColor="?attr/cColorOnPrimary"
                    android:textColorHint="?attr/cInputHintColor"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/passwordCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="?attr/cCardLoginInputBackgroundColor"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_password"
                    app:tint="?attr/cInputHintColor" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="100dp"
                    android:background="?attr/cCardLoginInputBackgroundColor"
                    android:ems="10"
                    android:hint="@string/act_login_input_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp"
                    android:textColor="?attr/cColorOnPrimary"
                    android:textColorHint="?attr/cInputHintColor"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="48dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/act_login_button_login"
            app:cardBackgroundColor="?attr/cDefaultButtonBackgroundColor"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/loginButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/act_login_button_login"
                android:textAllCaps="true"
                android:textColor="?attr/cColorOnSecondary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_settings_24"
            app:tint="?attr/cColorOnPrimary" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="16dp"
            android:paddingRight="8dp"
            android:paddingBottom="16dp"
            android:text="@string/act_login_settings"
            android:textColor="?attr/cColorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>