<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background_dialog"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/cColorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:textAlignment="center"
        android:text="@string/disconnect_confirmation"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/option_accept"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="?attr/cCardBackgroundColor"
            app:cardCornerRadius="15dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16sp"
                    app:tint="@color/green"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/cColorOnPrimary"
                    android:text="@string/option_accept"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/option_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="?attr/cCardBackgroundColor"
            app:cardCornerRadius="15dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="16sp"
                    app:tint="@color/red"
                    android:src="@drawable/ic_baseline_cancel_24"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/option_cancel"
                    android:textColor="?attr/cColorOnPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>


