<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/primaryBackgroundColor">

    <androidx.cardview.widget.CardView
        android:backgroundTint="?attr/listFilterCardBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/act_classrooms_search_day"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:textColor="?attr/listFilterTextColor"
            android:textColorHint="?attr/listFilterTextColor"
            app:boxStrokeColor="?attr/listFilterTextColor"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/act_classrooms_search_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:backgroundTint="?attr/listFilterCardBackgroundColor"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:hint="@string/act_classrooms_search_hour"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:textColor="?attr/listFilterTextColor"
            android:textColorHint="?attr/listFilterTextColor"
            app:boxStrokeColor="?attr/listFilterTextColor"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/act_classrooms_search_hour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/act_classrooms_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:backgroundTint="?attr/dashboardItemCardBackgroundColor"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/act_classrooms_search_button"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</LinearLayout>